--- a/deno.json
+++ b/deno.json
@@ -13,11 +13,15 @@
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
+    "@std/path": "jsr:@std/path@^1.0.8",
+    "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.0.16",
     "@types/react": "npm:@types/react@^19.0.10",
     "@types/react-dom": "npm:@types/react-dom@^19.0.4",
     "@vitejs/plugin-react-swc": "npm:@vitejs/plugin-react-swc@^3.8.0",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
-    "vite": "npm:vite@^6.1.1"
+    "tailwindcss": "npm:tailwindcss@^4.0.16",
+    "vite": "npm:vite@^6.1.1",
+    "@/*": "./*"
   }
 }
