--- a/deno.json
+++ b/deno.json
@@ -13,15 +13,22 @@
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
+    "@radix-ui/react-slot": "npm:@radix-ui/react-slot@^1.1.2",
     "@std/path": "jsr:@std/path@^1.0.8",
     "@tailwindcss/vite": "npm:@tailwindcss/vite@^4.0.16",
     "@types/react": "npm:@types/react@^19.0.10",
     "@types/react-dom": "npm:@types/react-dom@^19.0.4",
     "@vitejs/plugin-react-swc": "npm:@vitejs/plugin-react-swc@^3.8.0",
+    "class-variance-authority": "npm:class-variance-authority@^0.7.1",
+    "clsx": "npm:clsx@^2.1.1",
+    "lucide-react": "npm:lucide-react@^0.484.0",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
+    "tailwind-merge": "npm:tailwind-merge@^3.0.2",
     "tailwindcss": "npm:tailwindcss@^4.0.16",
+    "tailwindcss-animate": "npm:tailwindcss-animate@^1.0.7",
+    "tw-animate-css": "npm:tw-animate-css@^1.2.4",
     "vite": "npm:vite@^6.1.1",
-    "@/*": "./*"
+    "@/": "./"
   }
 }
