--- a/deno.json
+++ b/deno.json
@@ -24,6 +24,7 @@
     "lucide-react": "npm:lucide-react@^0.484.0",
     "react": "npm:react@^19.0.0",
     "react-dom": "npm:react-dom@^19.0.0",
+    "react-router": "npm:react-router@^7.4.0",
     "tailwind-merge": "npm:tailwind-merge@^3.0.2",
     "tailwindcss": "npm:tailwindcss@^4.0.16",
     "tailwindcss-animate": "npm:tailwindcss-animate@^1.0.7",
